# ha_schmidhuber

./: .gitignore  README.md  controller_triptych_gif.py  drive_vaes.py  pyproject.toml  vae-ablations.py
conf/profile/: smoke.yaml
ha_schmidhuber/: .gitignore  ablate_free_bits.py  checkpointing.py  collect_dataset.ipynb  collect_dataset.py  drive_rnns.py  main.py  model.py  pyproject.toml  sweep_vae.py  train-rnn.ipynb  train-vae.ipynb  train.ipynb  train_controller.py  train_rnn.py  train_vae.py  vae-ablations.py  vae_reconstruct_video.py
ha_schmidhuber/conf/: config.yaml
ha_schmidhuber/conf/profile/: full.yaml  smoke.yaml
